# simple-idm-server

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml.example  Cargo.toml  Dockerfile  README.md  config.example.oauth2-proxy.toml  config.example.ssh-login.toml  config.example.ssh-signer.toml  docker-compose.yml
.cargo/: config.toml
.claude/: settings.local.json
.sqlx/: query-01999625fd0897140dfd2d19d0203b7d4afaad2a1bbeaa3ce897bdce50ec33c0.json  query-01fb136fbd2b9a3fabb825fd98e0070600c54826e8a5814117ec8866f9d717b7.json  query-02a2ef937f61b3356051eda39cff5b9f08423eb37efd32a7f45473148dfda7e0.json  query-04879e1d9de75046ad255d575b582823e333db507f976b8f827864ba31bd9cd3.json  query-0662fc20586e4127430d4205834e0d15c7c47675efb435ac010598ff053538aa.json  query-0894943d98f861f76d388859a9a874ce106c8b58a8b6871fbef27c6bf6f53cc2.json  query-1377a26aa40894160f98f7758af7e0205d9ecaa2b29a5448d40f08df24500744.json  query-1b2e1171d6c7a50f24452f02b777e99d438926735ac59fb48f789173a7742c23.json  query-211d0996fa64b0584955922124cd4bbeb1fa51e4186cb02f7f02e3b0faafcd80.json  query-2725223c7d620f5b1047e46964c5138d16b80042688995020fdfdbfc5277808e.json  query-2819a69b42e9237e4cf89cd3158f4b831a765640d633e1a9bd506376c0dc5518.json  query-2b93e965423da0cd7932bbb72561f9f5910f5ee5cb14503533408d5c4e325adc.json  query-2c0c10c76cf18a34874386694a23536a3f28eaad37fc847817fe38304d588921.json  query-2de93ce496250135a823530835a16fff942eaf23e1c33ef760244dbd018c4efc.json  query-32100d5c2c90e1e73138d18ca96f20a23ccef865e94ebbbd472fba0fe1818ad6.json  query-33a8e03e0092ef5d48ff21df9ca105d1bf1b5970578cbe2630efc8c86002b00d.json  query-35a1d8bfa0cbdf23db35fb734b7d9a3766df9805fe223e135e6affb50a6dd6c1.json  query-3dcca278c61edda1c6aeb89933e76f51c7c26afc59bd9c2edef4fbc6be11f3c8.json  query-3de5e4fc3f1c93ff8c104e6cce7e1a0d08cba14d9ba8ef26ab97a44d702deb0b.json  query-419bddd824c5a07146de98a8c05b644d7cb1184ce6c222fbcc21be3c2d1baaea.json  query-4745951e231d9ed2deafa91650726e87f73cdad2a66b263ea100f1878413075e.json  query-484ae9c48853f7a696a416cc547e02d9724097fd18e5ab49ef19c103f1072452.json  query-4853a19cdf44b4d56cbcc3e45c7fc48f9c2c21bbeb4274a5f1eb4a39ff00595b.json  query-497537ae12386d5acd5541c7f268219ef0370ea4ed778d7d80e906e8709b474a.json  query-5686bed9dd121ffbe114c30117c66f419a0533893f0a3e9c6ff9d81cab18670d.json  query-57e43570a5ecaa0e404f9b47f31acd90f16e5834db5a061aaada9e1f3a480201.json  query-5c965b9fc2be18b48fb76d2e020b48c8583faff7999ed58e2af08ffcf2164015.json  query-5d9e3be3e471c409ee62404cb80f19f2d126a5f829de7a779cacacece52d49a5.json  query-61fd5199cd498daf6e7714fd7f090138fdda6a4b6195b91f65ad34828a53f6a4.json  query-63cf9d255ca82c3152034a72df6f1b1dceae63e788fa2803a2566690e78e2017.json  query-67dcd9225eef67794a8f98a32721626ec48d1356f6681089d0385bf7f99936bd.json  query-7197c2db065ea61ee82c3163095998a96e540337a72ca3a58908b345259b729f.json  query-7571ef96e75f2135c7b477cf8bb2c0396af04b3bc3f65263a1c82ee397fea4c0.json  query-85df09846576a1816ff99cc31db98c401aadd5d8f009dedeaff41b1d04910b4e.json  query-88a636a27118fcc4797edcb38de6139adc1da51da42ef6822543b4af7862c178.json  query-8c8a41f58217e1785f83d595736e7ff47bb88417f857f7a6f78eb6e85aadac46.json  (+23 more)
docs/: CHANGES_FROM_CHATGPT.md  DEVICE_FLOW.md  (+8 more)
(+93 files in other folders)
