[package]
name = "simple-idm-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# JWT & Crypto
jsonwebtoken = { version = "10.2", features = ["aws_lc_rs"] }
argon2 = "0.5"
uuid = { version = "1.19", features = ["v4", "serde"] }
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
clap = { version = "4.5", features = ["derive"] }
tabled = "0.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Config & Env
dotenvy = "0.15"
config = "0.15"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# HTTP client (for OIDC discovery)
reqwest = { version = "0.13", features = ["json", "form"] }

# OIDC client
openidconnect = "3.5"

# In-memory storage
dashmap = "6.1"
ratatui = "0.26"
crossterm = "0.27"
tui-input = "0.8"
url = "2.5"
dirs = "5.0"
urlencoding = "2.1"
qrcode = "0.14"

[[bin]]
name = "simple-idm-ctl"
path = "src/bin/simple-idm-ctl.rs"

[[bin]]
name = "simple-idm-oauth2-proxy"
path = "src/bin/simple-idm-oauth2-proxy.rs"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.13", features = ["json", "form"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
